Ensures the dropdowns are aligned after altering perspective

--- a/app/assets/v2/scss/navbar.scss
+++ b/app/assets/v2/scss/navbar.scss
@@ -154,6 +154,10 @@
 
   .gc-navbar-auth {
     perspective: 300px;
+
+    .gc-menu-container {
+      margin-top: -12px;
+    }
   }
 
   // gc-menu
